--- a/apps/desktop-shell/package.json
+++ b/apps/desktop-shell/package.json
@@ -6,8 +6,9 @@
   "main": "dist/main.js",
   "type": "module",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && pnpm copy:renderer",
     "clean": "rm -rf dist",
+    "copy:renderer": "node -e \"const fs=require('node:fs');fs.rmSync('dist/renderer',{recursive:true,force:true});fs.cpSync('src/renderer','dist/renderer',{recursive:true});\"",
     "dev": "pnpm build && electron dist/main.js",
     "dist": "pnpm build && electron-builder"
   },
