--- a/apps/desktop-shell/tsconfig.json
+++ b/apps/desktop-shell/tsconfig.json
@@ -7,8 +7,18 @@
     "rootDir": "src",
     "strict": true,
     "skipLibCheck": true,
-    "types": ["node"],
-    "lib": ["ES2022", "DOM"]
+    "types": [
+      "node"
+    ],
+    "lib": [
+      "ES2022",
+      "DOM"
+    ]
   },
-  "include": ["src/**/*.ts"]
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "src/**/*.test.ts"
+  ]
 }
